--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,7 +10,7 @@
 #app_header {
     font-family: 'Oswald', sans-serif;
     font-weight: 500;
-    font-size: small;
+    font-size: x-small;
     position: absolute;
     width: 100%;
     padding: 0;
