--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -204,3 +204,9 @@ nav {
         border: 1px solid $rock-dark;
     }
 }
+
+.footer_mid {
+    background-color: $rock-dark;
+    color: $rock-light;
+   
+}
