--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -194,7 +194,7 @@ nav {
     }
 }
 
-#music_video_section {
+#video_section {
     height: 100vh;
     background-image: url(../img/Video-1536x541.jpg);
     background-size: cover;
