--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -424,6 +424,7 @@ nav {
         margin-top: 0.5rem;
         font-weight: 100;
         letter-spacing: 1px;
+        font-size: small;
     }
 
     .form-control {
