--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -109,6 +109,12 @@ nav {
     margin-bottom: 8rem;
 }
 
+button.bg_accent:hover{
+    background-color: $rock-accent;
+    color: $rock-light;
+}
+
+
 #app_cards {
     position: relative;
 }
@@ -183,19 +189,6 @@ nav {
         color: lightgray;
     }
 
-    .btn_cstm {
-        background-color: transparent;
-        text-transform: uppercase;
-        font-size: x-small;
-        font-weight: 500;
-        letter-spacing: 1px;
-        color: $rock-light;
-        border: 1px solid $rock-accent;
-        border-radius: 0%;
-        padding: 0.6rem 2.5rem;
-        margin-top: 2rem;
-        margin-bottom: 8rem;
-    }
 }
 
 #video_section {
