--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -15,14 +15,14 @@
     width: 100%;
     padding: 0;
 }
+
 .orange_filter {
     filter: invert(52%) sepia(92%) saturate(473%) hue-rotate(353deg) brightness(94%) contrast(99%);
 
 }
 
-svg.cl_accent:hover{
+svg.cl_accent:hover {
     filter: invert(52%) sepia(92%) saturate(473%) hue-rotate(353deg) brightness(94%) contrast(99%);
-
 }
 
 nav {
@@ -61,7 +61,7 @@ nav {
                 text-transform: uppercase;
 
             }
-           
+
 
         }
     }
@@ -115,7 +115,7 @@ nav {
     margin-bottom: 8rem;
 }
 
-button.bg_accent:hover{
+button.bg_accent:hover {
     background-color: $rock-accent;
     color: $rock-light;
 }
@@ -131,16 +131,37 @@ button.bg_accent:hover{
     top: -7rem;
 }
 
-#app_cards .card {
+#app_cards {
+    .card {
+
+        border-radius: 0%;
+        background-color: #121212;
 
 
-    border-radius: 0%;
-    background-color: #121212;
+        .text-center {
+            display: flex;
+            margin: auto;
+            margin-top: 2rem;
+            justify-content: center;
+            align-items: center;
+            width: 132px;
+            aspect-ratio: 1/1;
+            border-radius: 50%;
+            
+            &:hover {
+                
+                border: 1px solid $rock-accent;
+                box-shadow: 0px 1px 14px $rock-accent;
+            }
 
-    svg {
-        padding-top: 2rem;
-        align-self: center;
-        fill: $rock-light;
+            svg {
+                width: 50%;
+                //margin-top: 2rem;
+                align-self: center;
+                fill: $rock-light;
+
+            }
+        }
     }
 }
 
@@ -223,7 +244,7 @@ button.bg_accent:hover{
 
     h6 {
         text-align: center;
-       
+
         text-transform: uppercase;
         letter-spacing: 1.5px;
         font-family: 'Oswald', sans-serif;
@@ -240,7 +261,7 @@ button.bg_accent:hover{
         font-weight: 500;
         color: $rock-light;
     }
-    
+
 
     .card {
 
@@ -251,6 +272,7 @@ button.bg_accent:hover{
     .card-body {
         padding-top: 1rem;
         padding-bottom: 0.5rem;
+
         h5 {
             text-align: center;
             text-transform: uppercase;
@@ -306,6 +328,7 @@ button.bg_accent:hover{
     font-size: 4.5rem;
     color: $rock-light;
 }
+
 #album_promo p {
     margin-top: 6rem;
     text-transform: uppercase;
@@ -385,6 +408,7 @@ button.bg_accent:hover{
         font-weight: 500;
         color: $rock-light;
     }
+
     p {
         margin-top: 0.5rem;
         font-weight: 100;
