--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -55,7 +55,7 @@ nav {
             align-items: center;
             text-align: center;
 
-            a {
+            a, svg {
                 color: $rock-light;
                 text-decoration: none;
                 text-transform: uppercase;
